package com.example.hr_app_1.ui.login;

import androidx.lifecycle.LiveData;
import androidx.lifecycle.MutableLiveData;
import androidx.lifecycle.ViewModel;

import android.util.Patterns;

public class LoginViewModel  extends ViewModel {

}
