package edu.temple.homerecognition;

public class User {
    // create the fields
    public String email;
    public String password;
}
