@startuml

title __HOMERECOGNITION.APP's Class Diagram__\n

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.ArchitecturepediaActivity {
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.BuildConfig {
    }
  }
  

  namespace edu.temple.homerecognition {
    interface edu.temple.homerecognition.Database {
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.DatabaseMethods {
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.House {
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.MainActivity {
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.MapsActivity {
    }
  }
  

  namespace edu.temple.homerecognition {
    class edu.temple.homerecognition.User {
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.LoginDataSource {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.LoginRepository {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.Result {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      namespace model {
        class edu.temple.homerecognition.data.model.LoggedInUser {
        }
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.dashboard {
      class edu.temple.homerecognition.ui.dashboard.DashboardFragment {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.dashboard {
      class edu.temple.homerecognition.ui.dashboard.DashboardViewModel {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.home {
      class edu.temple.homerecognition.ui.home.HomeFragment {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.home {
      class edu.temple.homerecognition.ui.home.HomeViewModel {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoggedInUserView {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginActivity {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginFormState {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginResult {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginViewModel {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.login {
      class edu.temple.homerecognition.ui.login.LoginViewModelFactory {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.notifications {
      class edu.temple.homerecognition.ui.notifications.NotificationsFragment {
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.notifications {
      class edu.temple.homerecognition.ui.notifications.NotificationsViewModel {
      }
    }
  }
  

  edu.temple.homerecognition.ArchitecturepediaActivity -up-|> androidx.appcompat.app.AppCompatActivity
  edu.temple.homerecognition.DatabaseMethods .up.|> edu.temple.homerecognition.Database
  edu.temple.homerecognition.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  edu.temple.homerecognition.MainActivity o-- edu.temple.homerecognition.Database : db
  edu.temple.homerecognition.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  edu.temple.homerecognition.MapsActivity -up-|> androidx.fragment.app.FragmentActivity
  edu.temple.homerecognition.data.LoginRepository o-- edu.temple.homerecognition.data.LoginDataSource : dataSource
  edu.temple.homerecognition.data.LoginRepository o-- edu.temple.homerecognition.data.model.LoggedInUser : user
  edu.temple.homerecognition.ui.dashboard.DashboardFragment -up-|> androidx.fragment.app.Fragment
  edu.temple.homerecognition.ui.dashboard.DashboardFragment o-- edu.temple.homerecognition.ui.dashboard.DashboardViewModel : dashboardViewModel
  edu.temple.homerecognition.ui.dashboard.DashboardViewModel -up-|> androidx.lifecycle.ViewModel
  edu.temple.homerecognition.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  edu.temple.homerecognition.ui.home.HomeFragment o-- edu.temple.homerecognition.ui.home.HomeViewModel : homeViewModel
  edu.temple.homerecognition.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel
  edu.temple.homerecognition.ui.login.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  edu.temple.homerecognition.ui.login.LoginActivity o-- edu.temple.homerecognition.ui.login.LoginViewModel : loginViewModel
  edu.temple.homerecognition.ui.login.LoginResult o-- edu.temple.homerecognition.ui.login.LoggedInUserView : success
  edu.temple.homerecognition.ui.login.LoginViewModel -up-|> androidx.lifecycle.ViewModel
  edu.temple.homerecognition.ui.login.LoginViewModel o-- edu.temple.homerecognition.data.LoginRepository : loginRepository
  edu.temple.homerecognition.ui.login.LoginViewModelFactory .up.|> androidx.lifecycle.ViewModelProvider.Factory
  edu.temple.homerecognition.ui.notifications.NotificationsFragment -up-|> androidx.fragment.app.Fragment
  edu.temple.homerecognition.ui.notifications.NotificationsFragment o-- edu.temple.homerecognition.ui.notifications.NotificationsViewModel : notificationsViewModel
  edu.temple.homerecognition.ui.notifications.NotificationsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
